# doctavious

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
lib/changelog/: Cargo.toml  README.md  TODO.md
lib/changelog/src/: bump.rs  changelog.rs  commit.rs  commits.rs  conventional.rs  entries.rs  errors.rs  lib.rs  release.rs  release_notes.rs  settings.rs
lib/changelog/templates/: gitlab.tmpl
lib/cifrs/: Cargo.toml  README.md  TODO.md
lib/cifrs/src/: backends.rs  detection.yaml  framework.rs  framework_detection.rs  frameworks.rs  frameworks.yaml  heuristics.yaml  js_module.rs  language.rs  lib.rs  monorepos.yaml  package_manager.rs  package_managers.yaml  projects.rs  strategy.rs  workspaces.rs  workspaces.yaml
lib/cifrs/src/backends/: nodejs.rs
lib/cifrs/src/frameworks/: antora.rs  astro.rs  docfx.rs  docusaurus_v2.rs  eleventy.rs  gatsby.rs  hexo.rs  hugo.rs  jekyll.rs  mdbook.rs  mkdocs.rs  nextjs.rs  nuxt_v3.rs  nuxtjs.rs  sphinx.rs  sveltekit.rs  vitepress.rs  vuepress.rs
lib/cifrs/src/projects/: csproj.rs  msbuild.rs  project_file.rs
lib/clidocs/: Cargo.toml  README.md
lib/clidocs/src/: lib.rs  models.rs
lib/code-notify/: Cargo.toml  README.md
lib/code-notify/src/: lib.rs
lib/code-notify/src/snapshots/: code_notify__tests__basic.snap
lib/code-ownify/: Cargo.toml  README.md
lib/code-ownify/src/: lib.rs  notify.rs  owners.rs  parse.rs  parser.rs
lib/continuous-integration/: Cargo.toml
lib/continuous-integration/src/: lib.rs
lib/doctavious-cli/: Cargo.toml
lib/doctavious-cli/src/: changelog.rs  cmd.rs  edit.rs  enums.rs  errors.rs  file_structure.rs  files.rs  git.rs  lib.rs  markup_format.rs  settings.rs  templates.rs  templating.rs
lib/doctavious-cli/src/changelog/: commit.rs  release.rs  settings.rs  tag.rs
lib/doctavious-cli/src/changelog/cmd/: init.rs  release.rs
lib/doctavious-cli/src/changelog/release/: cmd.rs  configuration.rs
lib/doctavious-cli/src/changelog/templates/: cocogitto.tmpl  github.tmpl  keep_a_changelog.tmpl
lib/doctavious-cli/src/cmd/: build.rs  deploy.rs  design_decisions.rs  frameworks.rs  githooks.rs  init.rs  link.rs  scm_hooks.rs  til.rs
lib/doctavious-cli/templates/adr/: init.adoc  init.md  toc.adoc  toc.md
lib/doctavious-cli/templates/changelog/: config.toml
lib/doctavious-cli/templates/rfd/: toc.adoc  toc.md
lib/doctavious-cli/templates/til/: post.adoc  post.md  readme.adoc  readme.md  toc.adoc  toc.md
lib/doctavious-cli/tests/fixtures/: fake-editor  fake-visual  noop-editor
lib/doctavious-server/: Cargo.toml
lib/doctavious-server/src/: configuration.rs  features.rs  lib.rs
lib/doctavious-server/src/features/: deployment.rs  design_decisions.rs
lib/doctavious-std/: Cargo.toml  README.md
lib/doctavious-std/src/: command.rs  env.rs  error.rs  fs.rs  lib.rs  regex.rs
lib/scm/: Cargo.toml  README.md
lib/scm/src/: commit.rs  drivers.rs  errors.rs  hooks.rs  lib.rs  platforms.rs  providers.rs
lib/scm/src/drivers/: git.rs  hg.rs  svn.rs
lib/scm/src/hooks/: hook.tmpl
lib/software_catalog/: Cargo.toml  README.md
lib/software_catalog/src/: backstage.rs  kubernetes.rs  lib.rs
lib/somever/: Cargo.toml  README.md
lib/somever/src/: calendar.rs  lib.rs  semantic.rs
lib/somever/src/snapshots/: somever__calendar__tests__should_successfully_create@2004-09-16_YY-MM_false_None.snap  somever__calendar__tests__should_successfully_create@2004-11-16_0Y.MM.DD_false_None.snap  somever__calendar__tests__should_successfully_create@2024-02-01_YYYY.0W_false_None.snap  somever__calendar__tests__should_successfully_create@2024-09-16_YY-MM_false_None.snap  somever__calendar__tests__should_successfully_create@2024-09-16_YYYY-MM-MINOR_false_None.snap  somever__calendar__tests__should_successfully_create@2024-09-16_YYYY.0M_false_None.snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.MINOR.MICRO_false_None.snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.MM.DD_MICRO_false_None.snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.MM.DD_false_None.snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.MM_false_Some("suffix").snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.MM_true_None.snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.MM_true_Some("suffix").snap  somever__calendar__tests__should_successfully_create@2024-11-16_YYYY.WW_false_None.snap  somever__calendar__tests__should_successfully_create@2024-11-6_YYYY.MM.0D_false_None.snap  somever__calendar__tests__should_successfully_create@2024-11-6_YYYY.MM.DD_false_None.snap  somever__calendar__tests__should_successfully_parse@04.10.13_0Y.MM.DD.snap  somever__calendar__tests__should_successfully_parse@2024-05_YYYY-0W.snap  somever__calendar__tests__should_successfully_parse@2024-09-alpha_YYYY-MM.snap  somever__calendar__tests__should_successfully_parse@2024-09_YYYY-0M.snap  somever__calendar__tests__should_successfully_parse@2024-10_YYYY-MM.snap  somever__calendar__tests__should_successfully_parse@2024-46_YYYY-WW.snap  somever__calendar__tests__should_successfully_parse@2024.1.suffix_YYYY.MM.snap  somever__calendar__tests__should_successfully_parse@2024.10.13_1_YYYY.MM.DD_MICRO.snap  somever__calendar__tests__should_successfully_parse@2024.10.13_YYYY.MM.DD.snap  somever__calendar__tests__should_successfully_parse@2024.10.6_YYYY.MM.0D.snap  somever__calendar__tests__should_successfully_parse@2024.10.6_YYYY.MM.DD.snap  somever__calendar__tests__should_successfully_parse@2024.2.1-rc1_YYYY.MINOR.MICRO.snap  somever__calendar__tests__should_successfully_parse@24.2.1_YY.MINOR.MICRO.snap  somever__calendar__tests__should_successfully_parse@4-09_YY-MM.snap  somever__calendar__tests__should_successfully_parse@v2024.10.13_1_YYYY.MM.DD_MICRO.snap
lib/team-topologies/: Cargo.toml  README.md
lib/templating/: Cargo.toml
lib/templating/src/: filters.rs  lib.rs
lib/third-party-api-clients/gitlab/: Cargo.toml  README.md
lib/third-party-api-clients/gitlab/src/: lib.rs  merge_requests.rs
(+97 files in other folders)
