#[package]
#name = "doctavious"
#version = "0.1.0"
#edition = "2021"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "bin/cli",
    "bin/server",
    "lib/cas",
    "lib/changelog",
    "lib/cifrs",
    "lib/common",
    "lib/doctavious-cli",
    "lib/doctavious-server",
    "lib/testing",
    "lib/scm",
]

[workspace.dependencies]
anyhow = "1.0.70"
axum = { version = "0.7.2", features = ["http2", "macros", "multipart", "ws"] }
bincode = "1.3.3"
blake3 = "1.3.3"
chrono = {version="0.4",features = ["serde"]}
clap = { version = "4.0.32" }
console-subscriber = "0.2.0"
crc32c = "0.6.5"
dotavious = "0.2.1"
dotenv = "0.15"
directories = "5.0.1"
figment = "0.10.11"
futures = "0.3.28"
git2 = "0.18.1"
glob = "0.3.0"
glob-match = "0.2.1"
gray_matter = "0.2"
hyper = { version = "1.0", features = [] }
indexmap = { version = "2.0.2", features = ["serde"] }
insta = { version = "1.38.0" }
lazy_static = "1.4"
mime = "0.3.17"
minijinja = "2.0.1"
once_cell = "1.17.1"
opendal = "0.46.0"
opentelemetry = { version = "0.22.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
rayon = "1.9.0"
regex = "1.8.4"
remain = "0.2.11"
reqwest = { version = "0.12.1", default-features = false, features = ["blocking", "rustls-tls", "json", "multipart"] }
semver = "1.0.21"
serial_test = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0" }
serde_regex = "1.1.0"
serde_with = "3.4.0"
serde-xml-rs = "0.6.0"
# TODO: no longer maintained. probably should follow insta and vendor it. yaml-rust2 currently doesnt support serde
serde_yaml = "0.9"
strum = { version = "0.26.1", features = ["derive"] }
swc_ecma_parser = "0.143.5"
swc = "0.273.11"
swc_common = { version = "0.33.0", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.112.4", features=["serde-impl"] }
tabled = "0.15.0"
temp-env = "0.3.1"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.28", features = ["macros", "fs"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-tungstenite = "0.21.0"
toml = "0.8.2"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
tracing-test = "0.2"
ulid = { version = "1.0.1", features = ["serde"] }
unidecode = "0.3.0"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
walkdir = "2.3.2"
which = "6.0.0"
