[package]
name = "changelog"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scm = { path = "../../lib/scm" }
git2 = { workspace = true }
git-conventional = {  version = "0.12.4", features = ["serde"] }
glob = { workspace = true }
lazy_static = { workspace = true }
next_version = "0.2.12"
regex = { workspace = true }
remain = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
directories = { workspace = true }
once_cell = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }