[package]
name = "cifrs"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
serde-xml-rs = { workspace = true }
swc = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
directories = { workspace = true }
once_cell = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }