[package]
name = "clidocs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
minijinja = { workspace = true, features = ["loader"] }
remain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["filters", "yaml"]}
temp-env = { workspace = true }