[package]
name = "code-notify"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
remain = { workspace = true }
scm = { path = "../scm" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
testing = { path = "../testing" }
