[package]
name = "code-ownify"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
remain = { workspace = true }
scm = { path = "../scm" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
testing = { path = "../testing" }
