[package]
name = "continuous-integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
doctavious-std = { path = "../../lib/doctavious-std" }
github-client = { path = "../../lib/third-party/github" }
gitlab-client = { path = "../../lib/third-party/gitlab" }
remain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
scm = { path = "../../lib/scm" }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
