[package]
name = "doctavious-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cas = { path = "../../lib/cas" }
cifrs = { path = "../../lib/cifrs" }

# TODO: see if we need bincode
bincode = { workspace = true }
changelog = { path = "../changelog"}
chrono = { workspace = true }
# TODO: see if we need crc32c
crc32c = { workspace = true }
directories = { workspace = true }
dotavious = { workspace = true }
doctavious-std = { path = "../../lib/doctavious-std" }
doctavious-templating = { path = "../../lib/templating" }
git2 = { workspace = true }
git-conventional = {  workspace = true, features = ["serde"] }
glob = { workspace = true }
glob-match = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
markup = { path = "../../lib/markup" }
md5 = { workspace = true }
minijinja = { workspace = true, features = ["loader"] }
rayon = { workspace = true }
regex = { workspace = true }
remain = { workspace = true }
scm = { path = "../scm" }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
somever = { path = "../somever" }
strum = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

# I'm included preserve_order to fix some failing tests.
# TODO: check these tests and see if I can remove the need to preserve order
#commands::scmhook::install::tests::should_fail_with_existing_hook_and_old
#commands::scmhook::install::tests::should_install_with_existing_doctavious_config
#commands::scmhook::install::tests::should_update_stale_synchronization_file
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
unidecode = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }


[dev-dependencies]
insta = { workspace = true, features = ["filters", "yaml"]}
temp-env = { workspace = true }
testing = { path = "../../lib/testing" }