[package]
name = "scm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
crc32c = { workspace = true }
git2 = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }
remain = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
semver = { workspace =  true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
