[package]
name = "scm"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
gitlab-client = { path = "../../lib/third-party-api-clients/gitlab" }
git2 = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
octocrab = "0.44.0"
regex = { workspace = true }
remain = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
semver = { workspace =  true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
