[package]
name = "somever"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
remain = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
testing = { path = "../../lib/testing" }