[package]
name = "somever"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
testing = { path = "../../lib/testing" }